refactor: improve structure / format of the code

--- a/index.html
+++ b/index.html
@@ -21,16 +21,24 @@
       </main>
 
       <footer class='footer'>
-        <a href='https://github.com/silva-thiago/' rel='noopener noreferrer' target='_blank' title='Link para o GitHub'>
-          <i class='fa-brands fa-fw fa-github'></i>
-          T. J. Silva
-        </a>
+        <p>
+          Developed by T. J. Silva
+          <a href='https://github.com/silva-thiago/' rel='noopener noreferrer' target='_blank' title='Link para o GitHub'>
+            <i class='fa-brands fa-fw fa-github'></i>
+          </a>
+        </p>
+        <p>
+          Inspired by
+          <a href='https://pokeapi.co/' rel='noopener noreferrer' target='_blank' title='Link para PokéAPI'>PokéAPI</a>
+          .
+          Pokémon and Pokémon character names are trademarks of Nintendo.
+        </p>
       </footer>
     </div>
 
     <script defer src='src/static/vendors/fontawesome/js/brands.js'></script>
     <script defer src='src/static/vendors/fontawesome/js/solid.js'></script>
     <script defer src='src/static/vendors/fontawesome/js/fontawesome.js'></script>
-    <script src='src/static/assets/js/app.js'></script>
+    <script async src='src/static/assets/js/app.js'></script>
   </body>
 </html>
